--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "underscore": "~1.1.7",
         "express": "~2.5.11",
         "backbone": "0.3.3",
-        "jquery": "~1.6.3",
+        "jquery": "2.1.0",
         "optimist": "~0.6.0",
         "mirror": "~0.3.3"
     },
@@ -25,6 +25,6 @@
         "coverage": "./test/coverage.sh"
     },
     "engines": {
-      "node": "0.4 || 0.6 || 0.8 || 0.10"
+      "node": "0.4 || 0.6 || 0.8 || 0.10 || 4"
     }
 }
